--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "nookies": "^2.5.2",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.0.4",
     "sass": "^1.52.3"
